# sagemaker-ml-project

./: .gitignore  Dockerfile  README.md  build_and_publish.sh  config.py  deploy.py  env.example  estimator.py  hyperparameter_tuning.py  makefile  nonexistent_hash.txt  prepare_data.py  pyproject.toml  requirements_hash.txt  test_mlflow_inference.py  training.py  utils.py
.circleci/: config.yml
src/: __init__.py  config.py  deploy.py  estimator.py  hyperparameter_tuning.py  prepare_data.py  test_mlflow_inference.py  training.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_deploy.py  test_estimator.py  test_hyperparameter_tuning.py  test_mlflow_inference.py  test_prepare_data.py  test_training.py  test_utils.py
